[package]
name = "runger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
indexmap = "2.2.5"
mlua = { version = "0.9.6", features = ["lua54"] }
ratatui = { version = "0.26.1", features = ["unstable-widget-ref"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt", "time"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
