[package]
name = "runger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
futures = "0.3.31"
indexmap = "2.7.0"
mlua = { version = "0.10.2", features = ["lua54"] }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["fs", "macros", "rt", "time"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
